address reviewed concerns